# lolohop

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  KEY_STRENGTHS_TRADING_PLATFORMS.md  PULL_REQUEST.md  README.md  README_ENTRYPOINTS.md  SETUP_GUIDE.md  __init__.py  alembic.ini  api_documentation_generator.py  app.py  ci_cd_workflow.yaml  cli.py  comprehensive_test_framework.py  database_init.py  docker-compose.yml  enhanced_backtest_engine.py  enhanced_ml_predictor.py  enhanced_realtime_engine.py  enhanced_smart_router.py  env.example  execution.py  health_check_service.py  main.py  main_mcc_wrapper.py  main_ultimate.py  main_ultimate_integrated.py  ml_model_trainer.py  news_filter_integration.py  production_fastapi_app.py  prometheus.yml  prometheus_monitoring.py  pyproject.toml  pytest_configuration.ini  quickstart.py  rate_limiting_configuration.py  (+15 more)
.github/workflows/: ci.yml  python-package-conda.yml  release.yml  security-scan.yml  static.yml  webpack.yml
alembic/: env.py
alembic/versions/: 1b0666c43575_initial_schema.py  746b2609eac5_remove_duplicate_users_email_index.py
analysis/: market_analysis.py
analysis/patterns/: advanced_patterns.py
analytics/: __init__.py  portfolio.py
api/: admin.py  auth.py  backtesting.py  gateway.py  server.py  trading.py  websocket_server.py
auth/: __init__.py  jwt.py  router.py  routes.py  service.py
backtest/: README.md  engine.py
backtesting/: README.md  backtest_engine.py  engine.py  execution.py  hyperopt.py  run_backtest.py  walk_forward.py
brain/: brain.py  cognitive_engine.py
brokers/: __init__.py  base.py  ccxt_connector.py  factory.py  oanda.py  paper_trading.py  smart_router.py
brokers/prop_firms/: __init__.py  all_brokers.py  ftmo.py  topstep.py
cache/: __init__.py  market_data_cache.py  redis_manager.py
charting/: __init__.py  chart_engine.py  indicators.py
compliance/: aml.py  compliance_manager.py
config/: __init__.py  config.development.json  config_manager.py  settings.py  ultimate_config.yaml  vault.py
core/: __init__.py  email_service.py  env_validator.py  event_bus.py  metrics.py  position_reconciler.py  signal_engine.py  strategy_orchestra.py
core/acceleration/: __init__.py
core/analytics/: realtime_heatmap.py
core/arbitrage/: cross_exchange.py
core/mcc/: master_control.py
dashboard/: app.py  app_fixed.py  index.html  vite.config.ts  web_dashboard.py
dashboard/public/: manifest.json
dashboard/src/: index.css
data/: XAUUSD_2Y.csv  order_book.py  real_time_price_engine.py  streaming.py
database/: connection.py  models.py  user_models.py
deployment/: Dockerfile  README.md  docker-compose.yml  k8s_config.yaml
deployments/: README.md
deployments/docker/: Dockerfile.dev
deployments/k8s/: service.yaml
docker/: docker-compose.yml
docs/: API.md  COMPREHENSIVE_FIXES.md
events/: event_store.py
examples/: backtest_example.py  build_notebook.py  end_to_end.ipynb  generate_proof_artifacts.py
examples/results/: performance.json  trades.csv
execution/: __init__.py  async_engine.py  oms.py  order_gateway.py  position_tracker.py  throttler.py  trade_executor.py
health/: health_check_service.py
hopefx/: __main__.py
hopefx/analysis/: strategy.py
hopefx/api/: mobile_routes.py
hopefx/brain/: __init__.py  engine.py
hopefx/events/: bus.py  (+2 more)
improvements/: README.md  api_documentation_integration.md  dependency_management.md  error_handling_retry_logic.md  logging_consistency.md  performance_optimization.md  rate_limiting_integration.md  security_best_practices.md  test_coverage_expansion.md  type_hints_improvement.md
infrastructure/: health.py  logging.py  metrics.py
k8s/: secrets.example.yaml
market_data/: mt5_live_feed.py  validation.py
ml/: features.py  online_learner.py  run_training.py  train_improved.py  training.py
mobile/: __init__.py  api.py  api_v2.py  manifest.json
monetization/: marketplace.py
monitoring/: prometheus.yml
notifications/: __init__.py  manager.py  telegram_bot.py
payments/: payment_gateway.py  wallet.py
portfolio/: pms.py
replay/: __init__.py
resilience/: circuit_breaker.py
risk/: __init__.py  advanced_analytics.py  circuit_breakers.py  fia_compliance.py  manager.py  self_trade_prevention.py
scripts/: xauusd_bot.py
security/: encryption.py  key_manager.py  security_manager.py  vault.py
social/: __init__.py  advanced_copy_trading.py  copy_trading.py  copy_trading_engine.py  leaderboards.py  performance.py
src/: main.py
strategies/: __init__.py  base.py  bollinger_bands.py  macd_strategy.py  manager.py  rsi_strategy.py
teams/: __init__.py  team_manager.py
templates/: login.html  paper_trading.html
tests/: conftest.py  test_backtesting.py  test_comprehensive.py  test_copy_trading.py  test_execution.py  test_integration.py  test_market_data.py  test_portfolio.py  test_risk_calculations.py  test_trading.py  test_validation.py
utils/: __init__.py  disaster_recovery.py  ultimate_helpers.py
(+148 files in other folders)
