[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hopefx-ai-trading"
version = "1.0.0"
description = "Advanced AI-powered XAUUSD trading framework with machine learning"
readme = "README.md"
authors = [
    {name = "HOPEFX Team", email = "team@hopefx.ai"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["trading", "ai", "machine-learning", "xauusd", "forex", "cryptocurrency", "bitcoin"]
dependencies = [
    # Core dependencies are read from requirements.txt
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "pylint>=3.0.3",
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/HACKLOVE340/HOPEFX-AI-TRADING"
Documentation = "https://github.com/HACKLOVE340/HOPEFX-AI-TRADING/blob/main/README.md"
Repository = "https://github.com/HACKLOVE340/HOPEFX-AI-TRADING"
"Bug Tracker" = "https://github.com/HACKLOVE340/HOPEFX-AI-TRADING/issues"

[project.scripts]
hopefx = "cli:main"
hopefx-server = "app:run_server"

[tool.setuptools]
packages = ["config", "cache", "database", "brokers", "strategies", "ml", "risk", "api", "notifications"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=. --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hopefx-ai-trading"
version = "2.0.0"
description = "Institutional-grade XAUUSD AI Trading Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "HOPEFX Team", email = "dev@hopefx.com"}
]
keywords = ["trading", "forex", "xauusd", "machine-learning", "algorithmic-trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "aioredis>=2.0.1",
    "xgboost>=2.1.2",
    "torch>=2.5.1",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "cryptography>=43.0.3",
    "PyJWT>=2.9.0",
    "argon2-cffi>=23.1.0",
    "websockets>=13.1",
    "aiohttp>=3.11.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.2",
    "mypy>=1.13.0",
    "bandit[toml]>=1.7.10",
    "pre-commit>=4.0.1",
]

[project.scripts]
hopefx = "src.main:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]
